Test new pipeline

--- a/orig/001.md
+++ b/orig/001.md
@@ -40,7 +40,7 @@ Wuniaþ sē cyning and sēo cwēn on holte? Nese, ne wuniaþ hīe on holte. Hīe
 
 Wunaþ Osweald Bera on tūne? Nese, ne wunaþ hē on tūne. Hē wunaþ on holte.
 
-Hwȳ wunaþ Osweald on holte? Osweald wunaþ on holte for þām þe hē is bera. And beran wuniaþ on holte, nā on tūne.
+Hwȳ wunaþ Osweald Bera on holte? Osweald wunaþ on holte for þām þe hē is bera. And beran wuniaþ on holte, nā on tūne.
 
 Wuniaþ maniġe beran on holte? Nese, ne wuniaþ maniġe beran on holte. Ne wuniaþ maniġe beran on Engla-lande!
 
